commit message - fixed the menu list items area. Before the items were squished together on the tablet version.

--- a/css/main.css
+++ b/css/main.css
@@ -213,6 +213,7 @@ header nav ul {
 
 header nav ul li {
   font-size: 1.125em;
+  padding-right: 1em;
   
 }
 
